Fix layout issues [ci skip]

--- a/src/components/shared/ContentPageSharedStyles.css
+++ b/src/components/shared/ContentPageSharedStyles.css
@@ -12,8 +12,6 @@
 div.ContentPageSkeletonContentContainerDimension {
   margin: 0px auto;
   max-width: 1600px;
-  padding-left: 7.5%;
-  padding-right: 7.5%;
 }
 
 /** ------------------------- CONTAINER AUXILLARY -------------------------- **/
