--- a/src/components/shared/ContentPageSkeleton.css
+++ b/src/components/shared/ContentPageSkeleton.css
@@ -11,6 +11,11 @@
   background-color: rgba(239, 239, 239, 1.0);
 }
 
+div.ContentPageSkeletonContentContainer {
+  padding-left: 7.5%;
+  padding-right: 7.5%;
+}
+
 /** This width specification is kept in sync
     with the one defined in ContentPageTopNavMenuBar.css
 */
