--- a/src/components/shared/ContentPageTopNavMenuBar.css
+++ b/src/components/shared/ContentPageTopNavMenuBar.css
@@ -8,10 +8,11 @@
  */
 
 div.ContentPageTopNavMenuBarContainer {
-  width: 100%;
+  /* width: 100%; */
   padding: 10px 0;
   display: flex;
   justify-content: space-between;
+  background-color: pink;
 }
 
 div.ContentPageTopNavMenuBarMenuListSidePseudoContainer {
